Add test data gen and solutions for jumps.
Also modify the following to make it easier to create the test data
1. Change Q = 1 subtask to Q <= 5
2. Change N <= 1e5 global constraint to 2e5

--- a/jumps/subtasks.json
+++ b/jumps/subtasks.json
@@ -21,7 +21,7 @@
       "score": 0,
       "validators": []
     },
-    "single-query": {
+    "small-query": {
       "index": 4,
       "score": 0,
       "validators": []
